--- a/InfluxDB/Dockerfile
+++ b/InfluxDB/Dockerfile
@@ -6,8 +6,8 @@ WORKDIR /usr/src/app
 COPY requirements.txt ./
 COPY ./Config.yaml /usr/src/
 COPY ./utilities.py ./
-COPY ./MQTT/Publisher.py ./
+COPY ./InfluxDB/Kafka_Influxdb_Data_Ingestion.py ./
 
 RUN pip install --no-cache-dir -r requirements.txt
 
-CMD ["python3", "./Publisher.py"]
+CMD ["python3", "./Kafka_Influxdb_Data_Ingestion.py"]
