--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -82,16 +82,66 @@ services:
      - DOCKER_INFLUXDB_INIT_BUCKET=Sensor_Data
      - DOCKER_INFLUXDB_INIT_ADMIN_TOKEN=mytoken
 
+ kafka_producer:
+   image: producer-kafka
+   build:
+     context: .
+     dockerfile: ./MQTT/Dockerfile
+   container_name: Producer_Kafka
+   restart: on-failure
+   networks:
+      - kafka_network
+   devices:
+     - /dev/ttyACM0:/dev/ttyACM0
+   depends_on:
+     - kafka
+
+ kafka_mqtt_bridge:
+   image: mqtt-kafka-bridge
+   build:
+     context: .
+     dockerfile: ./MQTT-KAFKA/Dockerfile
+   container_name: Mqtt_Kafka_Bridge
+   restart: on-failure
+   networks:
+     - kafka_network
+   depends_on:
+     - kafka
+     - kafka_producer
+
+ kafka_consumer:
+   image: consumer-kafka
+   build:
+     context: .
+     dockerfile: ./Kafka/Dockerfile
+   container_name: Consumer_Kafka
+   restart: on-failure
+   networks:
+     - kafka_network
+   depends_on:
+     - kafka
+     - kafka_mqtt_bridge
+
+ kafka_influxdb_consumer:
+   image: influxdb-kafka-ingestion
+   build:
+     context: .
+     dockerfile: ./InfluxDB/Dockerfile
+   container_name: influxdb_Kafka_ingestion
+   restart: on-failure
+   environment:
+     - INFLUXDB_TOKEN=mytoken
+   networks:
+     - kafka_network
+   depends_on:
+     - kafka
+     - kafka_mqtt_bridge
+
 networks:
   grafana_network:
   kafka_network:
     name: kafka_docker_net
+
 volumes:
   influxdb_data:
   grafana_data:
-
-
-
-
-
-
