--- a/Config.yaml
+++ b/Config.yaml
@@ -1,19 +1,24 @@
 Configurations:
-
+# To run a python MQTT client from outside Docker container use "localhost" as MQTT broker
+# To run it from the container, use the Ip address of the host machine. 1883 is default port
+# Here '192.168.x.x' is the IP of the local host machine, Please don't use localhost(127.0.0.1)
 - MQTT:
-    broker: localhost
+    broker: 192.168.x.x
     port: 1883
-    username: "kunal"
-    password: "picocamera123"
-    topic: "Sensor/Values"
-    serial_port: /dev/ttyACM1
-
+    username: "user"
+    password: "password"
+    topic: "topic name"
+    serial_port: /dev/ttyACM0
+# To run a python Kafka client from outside Docker container use "localhost:29092" as Kafka broker
+# Here 'kafka:9092' is the name of the container and 9092 is defined in docker_compose.yml as the port to
+# connect to inside kafka.
 - KAFKA:
-    broker: 'localhost:29092'
-    topic: "RealTime_Data"
-
+    broker: 'kafka:9092'
+    topic: "topic name"
+# To run a python InfluxDB client from outside docker container use "http://localhost:8086".
+# To communicate it from inside docker container use the IP address of the host machine.
+# In this case the IP address of machine is used as: http://192.168.x.x:8086 , 8086 s default port
 - INFLUXDB:
-    host: "http://localhost:8086"
-    org: "PICOCAMERA"
-    bucket: "Sensor_Data"
-
+    host: "http://192.168.x.x:8086"
+    org: "org name"
+    bucket: "bucket name"
