--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -130,7 +130,7 @@ services:
    container_name: influxdb_Kafka_ingestion
    restart: unless-stopped
    environment:
-     - INFLUXDB_TOKEN=foSwI9WyZHKQct2Q2CJkMFCQb8GrwcMuF-F6L2shSYgPQwYNY_EhWQVuUd31aeMKfGKmrp1zejDyR5AU2a4fGA==
+     - INFLUXDB_TOKEN=mytoken
    networks:
      - kafka_network
    depends_on:
